--- a/lifecycle-data/products/microsoft-application-virtualization-hosting-45.yml
+++ b/lifecycle-data/products/microsoft-application-virtualization-hosting-45.yml
@@ -2,13 +2,14 @@
 metadata:
   title: Microsoft Application Virtualization Hosting 4.5 voor Windows-desktops
   description: Microsoft Application Virtualization Hosting 4.5 voor Windows Desktops volgt het vaste levenscyclusbeleid.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 3cb5049ed11ed567b8b7c1f3bd51de8b00b27ee8
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  ms.date: 09/01/2020
+  keywords: for Windows Desktops
+  ms.openlocfilehash: 50fe924f5e1b5968a41beea54c1cc30d5df28434
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "812461"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "935481"
 name: Microsoft Application Virtualization Hosting 4.5 voor Windows-desktops
 summary: >
   Microsoft Application Virtualization Hosting 4.5 voor Windows Desktops volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
