--- a/lifecycle-data/products/microsoft-biztalk-accelerator-for-financial-services-10.yml
+++ b/lifecycle-data/products/microsoft-biztalk-accelerator-for-financial-services-10.yml
@@ -1,20 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft BizTalk Accelerator for Financial Services 1.0
-  description: Microsoft BizTalk Accelerator for Financial Services 1.0 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: dbacf7590c1aa3b0736935e033bbc6c3d2968dab
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  title: Microsoft BizTalk Accelerator voor financiële services 1,0
+  description: Microsoft BizTalk Accelerator for Financial Services 1,0 volgt het vaste levenscyclus beleid.
+  ms.date: 09/01/2020
+  keywords: Enterprise,Standard
+  ms.openlocfilehash: 4e6c4d0bd0d99808dff1c4cd2cf01f6c0ba6adf6
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "812464"
-name: Microsoft BizTalk Accelerator for Financial Services 1.0
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "935333"
+name: Microsoft BizTalk Accelerator voor financiële services 1,0
 summary: >+
-  Microsoft BizTalk Accelerator for Financial Services 1.0 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft BizTalk Accelerator for Financial Services 1,0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
-  Dit geldt voor de volgende edities: Enterprise, Standard
+  Dit is van toepassing op de volgende edities: Enterprise, Standard
 
 products:
 - microsoft-servers
@@ -27,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 03/12/2003
   endDate: 04/09/2013
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Standaard"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Standard"
