--- a/lifecycle-data/products/microsoft-biztalk-accelerator-for-hipaa-20.yml
+++ b/lifecycle-data/products/microsoft-biztalk-accelerator-for-hipaa-20.yml
@@ -2,19 +2,20 @@
 metadata:
   title: Microsoft BizTalk Accelerator voor HIPAA 2,0
   description: Microsoft BizTalk Accelerator voor HIPAA 2,0 volgt het vaste levenscyclus beleid.
-  ms.date: 08/19/2020
-  ms.openlocfilehash: 09c6fc47a6b2f21bb6325d7451927076984c2a5f
-  ms.sourcegitcommit: acbc3d1849bad925ef030cf951960bd7eb1b4e42
+  ms.date: 09/01/2020
+  keywords: Enterprise,Standard
+  ms.openlocfilehash: aab9e80e120618a791c1636446425b56d9d36995
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 08/19/2020
-  ms.locfileid: "904002"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "935296"
 name: Microsoft BizTalk Accelerator voor HIPAA 2,0
 summary: >+
   Microsoft BizTalk Accelerator voor HIPAA 2,0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
-  Dit geldt voor de volgende edities: Enterprise, Standard
+  Dit is van toepassing op de volgende edities: Enterprise, Standard
 
 products:
 - microsoft-servers
@@ -27,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 02/15/2003
   endDate: 04/09/2013
-content: "\n\n\n## <a name=\"editions\"></a>Edition \n* Enterprise\n* Verre"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Standard"
