--- a/lifecycle-data/products/microsoft-biztalk-accelerator-for-hipaa-30.yml
+++ b/lifecycle-data/products/microsoft-biztalk-accelerator-for-hipaa-30.yml
@@ -1,20 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft BizTalk Accelerator voor HIPAA 3.0
-  description: Microsoft BizTalk Accelerator voor HIPAA 3.0 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: c509b97024379ae56ee4a808ea7366ddead58404
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  title: Microsoft BizTalk Accelerator voor HIPAA 3,0
+  description: Microsoft BizTalk Accelerator voor HIPAA 3,0 volgt het vaste levenscyclus beleid.
+  ms.date: 09/01/2020
+  keywords: Enterprise,Standard
+  ms.openlocfilehash: 402414833e6f07af15c0b2d94d5cf40a9ebd80a1
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "812457"
-name: Microsoft BizTalk Accelerator voor HIPAA 3.0
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "935259"
+name: Microsoft BizTalk Accelerator voor HIPAA 3,0
 summary: >+
-  Microsoft BizTalk Accelerator voor HIPAA 3.0 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft BizTalk Accelerator voor HIPAA 3,0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
-  Dit geldt voor de volgende edities: Enterprise, Standard
+  Dit is van toepassing op de volgende edities: Enterprise, Standard
 
 products:
 - microsoft-servers
@@ -27,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 12/28/2004
   endDate: 01/13/2015
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Standaard"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Standard"
