--- a/lifecycle-data/products/microsoft-biztalk-accelerator-for-hl7-10.yml
+++ b/lifecycle-data/products/microsoft-biztalk-accelerator-for-hl7-10.yml
@@ -1,20 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: 'Microsoft BizTalk Accelerator voor HL7 1.0 '
-  description: Microsoft BizTalk Accelerator voor HL7 1.0 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: cef326653a2bc78d5b8b20c1dfb907827cd216d3
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  title: 'Microsoft BizTalk Accelerator voor HL7 1,0 '
+  description: Microsoft BizTalk Accelerator voor HL7 1,0 volgt het vaste levenscyclus beleid.
+  ms.date: 09/01/2020
+  keywords: Standard
+  ms.openlocfilehash: 727fa4605cef159b99154e6a57d40c81eab3d619
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "812455"
-name: 'Microsoft BizTalk Accelerator voor HL7 1.0 '
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "935148"
+name: 'Microsoft BizTalk Accelerator voor HL7 1,0 '
 summary: >+
-  Microsoft BizTalk Accelerator voor HL7 1.0 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft BizTalk Accelerator voor HL7 1,0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
-  Dit geldt voor de volgende edities: Standaard
+  Dit is van toepassing op de volgende edities: Standard
 
 products:
 - microsoft-servers
@@ -27,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 05/27/2004
   endDate: 07/08/2014
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Standaard"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Standard"
