--- a/lifecycle-data/products/microsoft-biztalk-adapter-20.yml
+++ b/lifecycle-data/products/microsoft-biztalk-adapter-20.yml
@@ -2,13 +2,14 @@
 metadata:
   title: Microsoft BizTalk adapter 2,0
   description: Microsoft BizTalk adapter 2,0 volgt het vaste levenscyclus beleid.
-  ms.date: 08/12/2020
-  ms.openlocfilehash: 807011d58eb9c568bd6d71b1ce3e616a4451e0bd
-  ms.sourcegitcommit: c7c4e0a2e3a93e251df1f1cdc0e078a7787b3dc3
+  ms.date: 09/01/2020
+  keywords: for MSMQ,for mySAP Business Suite,for SAP
+  ms.openlocfilehash: e6ccc3e11575a0d48e60228fa8eca4d1e4849669
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 08/13/2020
-  ms.locfileid: "893903"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "934741"
 name: Microsoft BizTalk adapter 2,0
 summary: >+
   Microsoft BizTalk adapter 2,0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
@@ -27,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 10/20/2004
   endDate: 01/13/2015
-content: "\n\n> [!NOTE]\n> De begindatum van Microsoft BizTalk adapter 2,0 voor SAP is 2 november 2004. De begindatum van Microsoft BizTalk adapter voor MSMQ 2,0 is 10 december 2004\n\n## <a name=\"editions\"></a>Edition \n* voor MSMQ\n* voor mySAP Business Suite\n* voor SAP"
+content: "\n\n> [!NOTE]\n> De begindatum van Microsoft BizTalk adapter 2,0 voor SAP is 2 november 2004. De begindatum van Microsoft BizTalk adapter voor MSMQ 2,0 is 10 december 2004\n\n## <a name=\"editions\"></a>Edities \n* voor MSMQ\n* voor mySAP Business Suite\n* voor SAP"
