--- a/lifecycle-data/products/microsoft-business-solutionsgreat-plains-80.yml
+++ b/lifecycle-data/products/microsoft-business-solutionsgreat-plains-80.yml
@@ -1,20 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft Business Solutions - Great Plains 8.0
-  description: Microsoft Business Solutions--Great Plains 8.0 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 708ba112ad66ce2d89482c6771b24c9fb9e31cab
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  title: Microsoft Business Solutions--Great Plains 8,0
+  description: Microsoft Business Solutions--Great Plains 8,0 volgt het vaste levenscyclus beleid.
+  ms.date: 09/01/2020
+  keywords: Standard
+  ms.openlocfilehash: 536666c99ff11026e44547243dc841425050faaa
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "812433"
-name: Microsoft Business Solutions - Great Plains 8.0
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "934667"
+name: Microsoft Business Solutions--Great Plains 8,0
 summary: >
-  Microsoft Business Solutions--Great Plains 8.0 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Business Solutions--Great Plains 8,0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
-  Dit geldt voor de volgende edities: Standaard
+  Dit is van toepassing op de volgende edities: Standard
 
 
   > [!IMPORTANT]
@@ -30,4 +31,4 @@ releases:
 - version: Original Release
   startDate: 06/01/2004
   endDate: 10/13/2009
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Standaard"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Standard"
