--- a/lifecycle-data/products/microsoft-class-server-40.yml
+++ b/lifecycle-data/products/microsoft-class-server-40.yml
@@ -1,20 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft Class Server 4.0
-  description: Microsoft Class Server 4.0 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: efd4e92bf5426dcdf6e52ce8bcbc679f026ce5ce
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  title: Microsoft class Server 4,0
+  description: Microsoft-Klasseserver 4,0 volgt het vaste levenscyclus beleid.
+  ms.date: 09/01/2020
+  keywords: Standard
+  ms.openlocfilehash: 0edbcc4d8beac695a9fc873ec7ae2d51c06e8f56
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "812420"
-name: Microsoft Class Server 4.0
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "934482"
+name: Microsoft class Server 4,0
 summary: >+
-  Microsoft Class Server 4.0 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft-Klasseserver 4,0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
-  Dit geldt voor de volgende edities: Standaard
+  Dit is van toepassing op de volgende edities: Standard
 
 products:
 - office
@@ -27,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 02/21/2005
   endDate: 04/14/2015
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Standaard"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Standard"
