--- a/lifecycle-data/products/microsoft-commerce-server-2009-r2.yml
+++ b/lifecycle-data/products/microsoft-commerce-server-2009-r2.yml
@@ -2,13 +2,14 @@
 metadata:
   title: Microsoft Commerce Server 2009 R2
   description: Microsoft Commerce Server 2009 R2 volgt het vaste levenscyclusbeleid.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 64c43c28d793d17e85dbd9c69d8bbe6b30c8f233
-  ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
+  ms.date: 09/01/2020
+  keywords: Enterprise,Standard
+  ms.openlocfilehash: 2eb1fe96425cba49ef01816d6e90dc79c1a0a306
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "851790"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "934334"
 name: Microsoft Commerce Server 2009 R2
 summary: >+
   Microsoft Commerce Server 2009 R2 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
