--- a/lifecycle-data/products/microsoft-connected-services-framework-25.yml
+++ b/lifecycle-data/products/microsoft-connected-services-framework-25.yml
@@ -1,20 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft Connected Services Framework 2.5
-  description: Microsoft Connected Services Framework 2.5 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 1475487e7ff1f7d6b5a54e58a3ba2b45e9a7ccf8
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  title: Microsoft Connected Services Framework 2,5
+  description: Microsoft Connected Services Framework 2,5 volgt het vaste levenscyclus beleid.
+  ms.date: 09/01/2020
+  keywords: Order Handling Standard Business Event 2.5,Server,Service Provider
+  ms.openlocfilehash: e0cdc315d310b2a6ed3c705261592af5be8ca851
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "812413"
-name: Microsoft Connected Services Framework 2.5
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "934112"
+name: Microsoft Connected Services Framework 2,5
 summary: >+
-  Microsoft Connected Services Framework 2.5 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Connected Services Framework 2,5 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
-  Dit geldt voor de volgende edities: Order Handling Standard Business Event 2.5, Server, Service Provider
+  Dit geldt voor de volgende edities: order verwerking, Standard Business gebeurtenis 2,5, Server, service provider
 
 products:
 - connected-services-framework
@@ -27,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 07/26/2005
   endDate: 10/13/2015
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Orderafhandeling Standaard Business Event 2.5\n* Server\n* Serviceprovider"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Best preport handling Standard Business gebeurtenis 2,5\n* Server\n* Service provider"
