--- a/lifecycle-data/products/microsoft-endpoint-configuration-manager.yml
+++ b/lifecycle-data/products/microsoft-endpoint-configuration-manager.yml
@@ -2,13 +2,14 @@
 metadata:
   title: Microsoft Endpoint Configuration Manager
   description: Microsoft endpoint Configuration Manager volgt het moderne levenscyclus beleid.
-  ms.date: 08/20/2020
-  ms.openlocfilehash: 0543b1273fc60ca7a23a5ce6455cf027737021c7
-  ms.sourcegitcommit: f5095aa6fc41dcc71c883cae08719b5b6bf9585c
+  ms.date: 09/01/2020
+  keywords: SCCM,System Center Configuration Manager
+  ms.openlocfilehash: fa325717dae54209b97245681c1e0292890ba952
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 08/20/2020
-  ms.locfileid: "905807"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "934038"
 name: Microsoft Endpoint Configuration Manager
 summary: >
   Microsoft endpoint Configuration Manager volgt het [moderne](/lifecycle/policies/modern) levenscyclus beleid.
@@ -69,4 +70,4 @@ releases:
 - version: Version 1511
   startDate: 12/08/2015
   endDate: 12/08/2016
-content: "\n## <a name=\"links\"></a>Verbindingen \n* [Onderhoudsinformatie](/mem/configmgr/core/servers/manage/current-branch-versions-supported)\n* [Versie Details](/mem/configmgr/core/servers/manage/updates#version-details)\n* [System Center Configuration Manager is nu Microsoft endpoint Configuration Manager](/mem/configmgr/core/understand/microsoft-endpoint-manager-faq)\n* [Historische versies](/mem/configmgr/core/servers/manage/updates#historical-versions)\n* [Wat is Configuratiebeheer](/mem/configmgr/core/understand/introduction)\n\n\n\nTrefwoorden: SCCM, System Center Configuration Manager"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Onderhoudsinformatie](/mem/configmgr/core/servers/manage/current-branch-versions-supported)\n* [Versie Details](/mem/configmgr/core/servers/manage/updates#version-details)\n* [System Center Configuration Manager is nu Microsoft endpoint Configuration Manager](/mem/configmgr/core/understand/microsoft-endpoint-manager-faq)\n* [Historische versies](/mem/configmgr/core/servers/manage/updates#historical-versions)\n* [Wat is Configuratiebeheer](/mem/configmgr/core/understand/introduction)"
