--- a/lifecycle-data/products/microsoft-enterprise-desktop-virtualization-20.yml
+++ b/lifecycle-data/products/microsoft-enterprise-desktop-virtualization-20.yml
@@ -1,20 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft Enterprise Desktop Virtualisatie 2.0
-  description: Microsoft Enterprise Desktop Virtualization 2.0 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 003a5a0de6b6aab0b3422c53f305f9a445cc76e9
-  ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
+  title: Microsoft Enterprise Desktop Virtualization 2,0
+  description: Microsoft Enterprise Desktop Virtualization 2,0 gevolgd door het beleid voor de vaststelling van de levenscyclus.
+  ms.date: 09/01/2020
+  keywords: Enterprise
+  ms.openlocfilehash: c389a7a61ffd7a171c58b70f1050657e82d736be
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "851970"
-name: Microsoft Enterprise Desktop Virtualisatie 2.0
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "933890"
+name: Microsoft Enterprise Desktop Virtualization 2,0
 summary: >+
-  Microsoft Enterprise Desktop Virtualization 2.0 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Enterprise Desktop Virtualization 2,0 gevolgd door het beleid voor de [vaststelling](/lifecycle/policies/fixed) van de levenscyclus.
 
 
-  Dit geldt voor de volgende edities: Enterprise
+  Dit is van toepassing op de volgende edities: Enterprise
 
 products:
 - windows
